@@ -1,4 +1,5 @@
 Edge
+* Default database user for Sphinx configuration is now ENV['USER'], not root.
 * Alias offset to offset_value for Kaminari.
 * Sphinx 2.1.0-dev support.
 
